2011-07-25  Mark Ellis  <mark@mpellis.org.uk>

	* use gio instead of libgnet

2011-07-25  Mark Ellis  <mark@mpellis.org.uk>

	* configure.ac.in, dccm/synce-device.c - remove support for very
	  old dbus-glib
	* configure.ac.in - clean up checking for dbus

2011-06-01  Mark Ellis  <mark@mpellis.org.uk>

	* scripts/synceconnector.py.in - rename uses of hal-dccm to dccm
	* configure.ac.in - disable file dccm, odccm and hal by default
	* dccm/ - fix build of dccm

2011-04-04  Mark Ellis  <mark@mpellis.org.uk>

	* move connector components into core

2011-03-22  Mark Ellis  <mark@mpellis.org.uk>

	* combine libsynce and librapi into a single library object
	* reorganise man page structure

2011-03-21  Mark Ellis  <mark@mpellis.org.uk>

	* begin combining libsynce and librapi to form synce-core package
