@@ -1,3 +1,7 @@
+2011-12-28  Mark Ellis  <mark@mpellis.org.uk>
+
+	* rename config header and move to root of source
+
 2011-07-25  Mark Ellis  <mark@mpellis.org.uk>
 
 	* use gio instead of libgnet
